--- a/src/components/UpdatesSection.astro
+++ b/src/components/UpdatesSection.astro
@@ -54,8 +54,8 @@ const { categories, updates } = updatesData as { categories: Category[]; updates
               <span data-lang="en" style="display:none">No Active Updates</span>
             </h3>
             <p class="updates-empty__text">
-              <span data-lang="bhs">Trenutno nema aktivnih obavještenja o prevozu.</span>
-              <span data-lang="en" style="display:none">There are currently no active transport updates or announcements.</span>
+              <span data-lang="bhs">Trenutno nema aktivnih obavještenja.</span>
+              <span data-lang="en" style="display:none">There are currently no active updates or announcements.</span>
             </p>
           </div>
         );
