--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import ContactsSection from '../components/contacts/ContactsSection.astro';
 
 <BaseLayout
   pageKey="home"
-  title="Pocetna | BLum"
+  title="Početna | BLum"
   description="BLum je nezavisna platforma za informacije o javnom prevozu, linijama i urbanoj mobilnosti u Banjoj Luci."
   canonicalUrl="https://open-data-bih.github.io/blum-project/"
 >
@@ -23,8 +23,8 @@ import ContactsSection from '../components/contacts/ContactsSection.astro';
           <span>Linije i red vožnje na jednom mjestu</span>
         </p>
         <p class="hero__detail" id="hero-detail-2">
-          <i class="fas fa-code-branch" aria-hidden="true"></i>
-          <span>Otvoren (open-source) i dostupan za dopune</span>
+          <i class="fas fa-circle-info" aria-hidden="true"></i>
+          <span>Ažurne informacije i korisni alati za kretanje gradom</span>
         </p>
       </div>
       <div class="hero__actions">
