--- a/src/pages/lines.astro
+++ b/src/pages/lines.astro
@@ -98,8 +98,8 @@ processedLines.sort(sortLinesByID);
 
 <BaseLayout
   pageKey="lines"
-  title="Red voznje i linije | BLum"
-  description="Pregled gradskih i prigradskih linija, mape trasa i reda voznje javnog prevoza u Banjoj Luci."
+  title="Red vožnje i linije | BLum"
+  description="Pregled gradskih i prigradskih linija, mape trasa i reda vožnje javnog prevoza u Banjoj Luci."
   canonicalUrl="https://open-data-bih.github.io/blum-project/lines/"
 >
   <!-- Urban Lines Map Section -->
