--- a/src/pages/updates.astro
+++ b/src/pages/updates.astro
@@ -5,8 +5,8 @@ import UpdatesSection from '../components/UpdatesSection.astro';
 
 <BaseLayout
   pageKey="updates"
-  title="Obavjestenja | BLum"
-  description="Najnovija obavjestenja o izmjenama linija, redu voznje i servisnim informacijama javnog prevoza u Banjoj Luci."
+  title="Obavještenja | BLum"
+  description="Najnovija obavještenja o izmjenama linija, redu vožnje i servisnim informacijama javnog prevoza u Banjoj Luci."
   canonicalUrl="https://open-data-bih.github.io/blum-project/updates/"
 >
   <section class="section section--narrow" id="updates">
