--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -6,7 +6,7 @@ import FAQSection from '../components/FAQSection.astro';
 <BaseLayout
   pageKey="faq"
   title="FAQ | BLum"
-  description="Najcesca pitanja i odgovori o koristenju BLum platforme, linijama, kartama i javnom prevozu u Banjoj Luci."
+  description="Najčešća pitanja i odgovori o korištenju BLum platforme, linijama, kartama i javnom prevozu u Banjoj Luci."
   canonicalUrl="https://open-data-bih.github.io/blum-project/faq/"
 >
   <section class="section section--narrow" id="faq">
