--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -45,14 +45,7 @@ const contactMaintainerLink = createMailtoLink('BLum - Kontakt', 'Pozdrav,\n\n')
   <div class="footer__content">
     <div class="footer__mission">
       <p id="footer-mission-text">
-        BLum je nezavisna platforma razvijena radi bolje dostupnosti informacija o javnom prevozu.
-      </p>
-    </div>
-
-    <div class="footer__disclaimer-box">
-      <i class="fas fa-info-circle" aria-hidden="true"></i>
-      <p id="footer-disclaimer-text">
-        BLUM je nezavisna platforma za informisanje o gradskom prevozu. Zvanične i ažurirane informacije provjerite kod nadležnih gradskih organa i prevoznika.
+        BLum je nezavisna platforma razvijena radi bolje dostupnosti informacija o javnom prevozu. Zvanične i ažurirane informacije provjerite kod nadležnih gradskih organa i prevoznika.
       </p>
     </div>
 
